Nested and sub directory translation file access

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,7 @@
 {
     "helloworld": "Hello World!",
-    "english": "English",
-    "french":"French"
+    "footer":{
+      "copywright":"Copywright"
+    }
   }
   
