--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -1,5 +1,6 @@
 {
     "helloworld": "Salut monde!",
-    "english":"Anglais",
-    "french":"Francais"
+    "footer":{
+      "copywright":"Droits d'auteur"
+    }
   }
