Language Selector Persistnce through local storage

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,6 +2,8 @@
     "helloworld": "Hello World!",
     "footer":{
       "copywright":"Copywright"
-    }
+    },
+    "newroute":"New route",
+    "homepage":"Home Page"
   }
   
