Setup Playwright and simple h1 test for french and english url

--- a/src/public/locales/en/common.json
+++ b/src/public/locales/en/common.json
@@ -3,7 +3,7 @@
     "footer":{
       "copywright":"Copywright"
     },
-    "newroute":"New route",
+    "newroute":"Testing Route",
     "homepage":"Home Page"
   }
   
